<?xml version="2.0"?>
<package format="3">
	<name>brownian_motion</name>
	<version>3.1.0</version>
	<description>
This package contains a node that esxecutes Brownian movements using either sonar or LRF data. Robot goes straight; when an obstacle is detected, the robot stops, turns to avoid the nearest obstacle and starts again moving straight with a new direction.
	</description>
  <author>Rui P. Rocha</author>  
	<maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>

 	<license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>                               
        <build_type>ament_cmake</build_type> 
  </export> 

</package>
